@@ -1,4 +1,4 @@
 #maven.buildNumber.plugin properties file
-#Sat Dec 01 14:24:27 CET 2012
+#Fri Dec 21 12:11:55 CET 2012
 buildNumber=4
-buildNumber0=1276
+buildNumber0=1309
