@@ -3,6 +3,7 @@ package no.priv.garshol.duke.test;
 
 import org.junit.Test;
 import org.junit.Before;
+import static junit.framework.Assert.fail;
 import static junit.framework.Assert.assertTrue;
 import static junit.framework.Assert.assertEquals;
 import junit.framework.AssertionFailedError;
@@ -10,10 +11,11 @@ import junit.framework.AssertionFailedError;
 import java.io.IOException;
 import java.io.StringReader;
 
-import no.priv.garshol.duke.datasources.CSVDataSource;
 import no.priv.garshol.duke.Column;
 import no.priv.garshol.duke.Record;
 import no.priv.garshol.duke.RecordIterator;
+import no.priv.garshol.duke.DukeConfigException;
+import no.priv.garshol.duke.datasources.CSVDataSource;
 
 public class CSVDataSourceTest {
   private CSVDataSource source;
@@ -102,6 +104,22 @@ public class CSVDataSourceTest {
     assertEquals("c", r.getValue("F3"));
   }
 
+  @Test
+  public void testColumnNotInHeader() throws IOException {
+    source.addColumn(new Column("F1", null, null, null));
+    source.addColumn(new Column("F2", null, null, null));
+    source.addColumn(new Column("F3", null, null, null));
+    source.addColumn(new Column("F4", null, null, null));
+    
+    try {
+      RecordIterator it = read("F1,F2,F3\na,b,c");
+      Record r = it.next();
+      fail("Didn't catch missing column F4");
+    } catch (DukeConfigException e) {
+      // caught the configuration mistake
+    }
+  }
+  
   private RecordIterator read(String csvdata) {
     source.setReader(new StringReader(csvdata));
     return source.getRecords();
