@@ -5,3 +5,4 @@
 Issue 83 solved
 Comparator for geo-coordinates added
 A q-grams comparator added
+Bug in CSV data source fixed
